# lancaster

./: .pre-commit-config.yaml  Cargo.toml  Gemfile  README.org  Rakefile  lancaster-0.0.0.gem  lancaster.gemspec
benchmark/: decoding.rb
lib/: lancaster.rb
script/: count_events.groovy  generate_sample_files.groovy
src/: encoding.rs  lib.rs  main.rs  schema.rs
test_cases/: array.avro  boolean.avro  bytes.avro  double.avro  enum.avro  fixed.avro  float.avro  int.avro  long.avro  map.avro  non_avro_file  null.avro  record.avro  string.avro  string_deflate.avro  union.avro
