[package]
name = "lancaster"
version = "0.1.0"
authors = ["Adam Sheehan <a.t.sheehan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Parsing Avro schemas from JSON
serde_json = "1.0"

# Deflate codec
flate2 = "1.0"
